Added order frontend

--- a/scripts/innofood/core/templates/core/order_approved.html
+++ b/scripts/innofood/core/templates/core/order_approved.html
@@ -1,5 +1,12 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-<h1>Your order approved</h1>
+<div class="container-fluid h-100 ">
+    <div class="row h-100">
+        <div class="col-md-8 offset-md-3 my-auto">
+            <h1 class="mb-4">Your order approved!</h1>
+            <button class="btn btn-primary"> Main page</button>
+        </div>
+    </div>
+</div>
 {% endblock %}
